@@ -100,6 +100,7 @@ PEOPE WHO MADE LANGUAGE FILES
 - INTERCAL               Benny Baumann
 - Java 5                 Clemens Bruckmann
 - Javascript             Ben Keen
+- jQuery                 Rob Loach
 - KiXtart                Riley McArdle
 - KLone C                Mickael Auger
 - KLone C++              Mickael Auger
